fixed navbar scroll effect stopping and cutting off portions of the section's title

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,7 @@ h2 {
 
 article {
     min-height: 100vh;
+    padding-top: 5vh;
 }
 
 header.App-header {
