--- a/client/src/AppSections/About/About.css
+++ b/client/src/AppSections/About/About.css
@@ -1,5 +1,7 @@
 img.about-image {
-    height: calc(50vw + 20px);
+    height: 50vw;
     width: 50vw;
+    max-width: 250px;
+    max-height: 350px;
     box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
 }
