--- a/client/src/components/Navbar/NavbarLink/NavbarLink.css
+++ b/client/src/components/Navbar/NavbarLink/NavbarLink.css
@@ -1,3 +1,7 @@
 .nav-link {
     padding-left: 15px;
 }
+.nav-link:hover {
+    cursor: pointer;
+    color: var(--primary-color);
+}
